--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "core-js": "^2.4.1",
     "jquery": "^3.1.0",
     "minimist": "^1.2.0",
+    "moment": "^2.15.1",
+    "node-summary": "^1.1.0",
     "request": "^2.74.0",
+    "unfluff": "^1.1.0",
     "uuid": "^2.0.2"
   },
   "devDependencies": {
