--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
   },
   "dependencies": {
     "async": "^2.0.1",
-    "babel-core": "^6.14.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.1.0",
     "minimist": "^1.2.0",
     "moment": "^2.15.1",
-    "node-summary": "^1.1.0",
+    "node-summary": "^1.2.0",
+    "popsicle": "^10.0.1",
     "reddit-oauth": "^1.1.1",
     "request": "^2.74.0",
     "unfluff": "^1.1.0",
@@ -40,10 +40,9 @@
     "vue": "^1.0.26"
   },
   "devDependencies": {
-    "babel-eslint": "^6.1.2",
     "electron-prebuilt": "^1.4.0",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "require-dir": "^0.3.0",
+    "gulp": "^4.0.0",
+    "require-dir": "^1.0.0",
     "standard": "^8.0.0"
   }
 }
