--- a/package.json
+++ b/package.json
@@ -28,16 +28,17 @@
     "babel-register": "^6.26.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "in-a-nutshell": "^0.1.2",
     "jquery": "^3.1.0",
     "minimist": "^1.2.0",
     "moment": "^2.15.1",
-    "node-summary": "^1.2.0",
     "popsicle": "^10.0.1",
     "reddit-oauth": "^1.1.1",
     "request": "^2.74.0",
     "unfluff": "^1.1.0",
     "uuid": "^2.0.2",
-    "vue": "^1.0.26"
+    "vue": "^1.0.26",
+    "wordcount": "^1.1.1"
   },
   "devDependencies": {
     "electron-prebuilt": "^1.4.0",
